--- a/_posts/2021-06-1-0531-0606.md
+++ b/_posts/2021-06-1-0531-0606.md
@@ -528,3 +528,383 @@ animation: 애니메이션이름 지속시간 [타이밍 함수 대기시간 반
 * border 처럼 사용하면 된다.
 * 구분선은 단과 단 사이의 간격 중간에 위치한다.
 * 색을 명시하지 않으면 기본 색은 검정색이지만 글자 색상을 지정하면 그 색을 따라간다.
+
+## 0602
+# 역량테스트 준비 9일차
+1차 테스트가 점점 코앞으로 다가오고 있다.  
+오늘은 flex와 grid에 대해 학습했다.  
+최근에 게시판 프로젝트를 진행하면서 레이아웃을 잡을 때 flex에 대해서 개념이 없어서 고생했던 기억이 있다.  
+이번 기회를 통해 css의 핵심 개념인 flex와 grid에 대해 잘 정리한 것 같다.
+
+# 플랙스
+## flex
+* flex는 2개의 개념으로 나뉘는데 Container와 items로 나뉜다.
+* Container는 items를 감싸는 부모 요소이며, 각 item을 정렬하기 위해선 Container이 필수이다.
+
+## Flex Container 속성
+### display
+* Flex Conatiner를 정의한다.
+* `display: flex` : Flex Conatiner 자체가 블록 요소처럼 사용된다.
+* `display: inline-flex` : Flex Conatiner 자체가 인라인 요소처럼 사용된다.
+
+### flex-flow
+* 단축 속성으로 Flex Items의 주 축을 설정하고 Items의 여러 줄 묶음도 설정한다.
+```css
+flex-flow: 주축, 여러줄 묶음;
+```
+
+#### flex-direction
+* items의 주 축을 설정한다.
+* row : items를 수평축으로 표시(왼쪽 -> 오른쪽). 기본값
+* row-reverse : items를 row의 반대 축으로 표시
+* column : items를 수직축으로 표시(위 -> 아래)
+* column-reverse: items를 column의 반대 축으로 표시
+
+#### 주 축(main-axis)과 교차 축(cross-axis)
+* 값 row는 items를 수평축으로 표시하므로 주 축이 수평이고 교차 축은 수직이 된다.
+* column은 그 반대의 경우이다.
+* 방향에 따라 주 축과 교차 축은 달라지는 상대적 개념이다.
+
+#### 시작점과 끝점
+* 주 축이나 교차 축의 시작하는 지점과 끝나는 지점을 지칭한다.
+* 방향에 따라 시작점과 끝점이 달라진다.
+* 주축의 방향이 reverse가 되어도 교차축의 시작점과 끝점은 변하지 않는다.
+
+#### flex-wrap
+* items의 여러 줄 묶음을 설정
+* nowrap : 모든 items를 여러 줄로 묶지 않음(한 줄에 표시). 기본값
+* wrap : items를 여러 줄로 묶음
+* wrap-reverse : items를 wrap의 역 방향으로 여러 줄로 묶음
+* 기본적으로 items는 한 줄에서만 표시되고 줄 바꿈 되지 않는다.
+
+### justify-content
+* 주 축의 정렬 방법을 설정
+* flex-start : items를 시작점으로 정렬
+* flex-end : items를 끝점으로 정렬
+* center : items를 가운데 정렬
+* space-between : 시작 item는 시작점에, 마지막 items는 끝점에 정렬되고 나머지 items는 사이에 고르게 정렬됨
+* space-around : items를 균등한 여백을 포함하여 정렬
+
+### align-content
+* 교차 축의 정렬 방법을 설정
+* flex-wrap 속성을 통해 Items가 여러 줄이고 여백이 있을 경우에만 사용할 수 있다.
+* items가 한 줄일 경우는 align-items 속성 사용할 것
+* stretch : Container의 교차 축을 채우기 위해 items를 늘림. 기본값
+* 나머지 속성은 justify-content와 동일
+
+### align-items
+* 교차 축에서 items의 정렬 방법을 설정
+* items가 한 줄일 경우 많이 사용
+* 속성은 stretch, flex-start, flex-end, center이 있고 align-content와 동일하다
+* baseline : items를 문자 기준선에 정렬
+
+```css
+display: flex;
+justify-content: center;
+align-items: center;
+```
+* 자주 쓰일만한 표현
+* 하나의 요소를 컨테이너로 만들고 그 안의 아이템을 중앙 정렬한다.
+
+## Flex Items
+### order
+* item의 순서를 설정
+* 숫자가 클수록 순서가 밀리고, 음수가 허용된다.
+* 숫자가 같을 때는 html 구조 순서대로 정렬된다.
+
+### flex-grow
+* item의 증가 너비 비율을 설정
+* 숫자가 더 크면 더 많은 너비를 가진다.
+* item이 가변 너비가 아니거나, 값이 0일 경우 효과가 없다. 기본값 0
+
+### flex-shrink
+* item이 감소하는 너비의 비율을 설정
+* 숫자가 더 크면 더 많은 너비가 감소
+* item이 가변 너비가 아니거나, 값이 0일 경우 효과가 없다. 기본값 1
+
+### flex-basis
+* item의 기본 너비를 설정
+* auto : width, height 등이 속성으로 item의 너비를 설정할 수 있다. 기본값
+* 단위 : 단위 값이 주어질 경우 너비를 설정할 수 없다.
+
+### flex
+* item의 너비를 설정하는 단축 속성
+```css
+flex: flex-grow flex-shrink flex-basis;
+```
+* flex-basis를 개별 속성으로 사용할 때는 기본값이 auto이지만 단축 속성에서 명시하지 않는다면 기본값이 0이 된다.
+
+### align-self
+* align-items는 Container 내 모든 items의 정렬 방법을 설정한다.
+* 필요에 의해 일부 item만 정렬 방법을 변경하려고 할 경우 align-self를 사용할 수 있다.
+* 이 속성은 align-items 속성보다 우선한다.
+* auto : Container의 align-items 속성을 상속받음
+* 다른 속성은 align-items와 같다.
+
+
+# 그리드
+* 2차원의 레이아웃 시스템을 제공한다.
+* flex box는 1차원 레이아웃을 위한 것이며, 좀 더 복잡한 레이아웃을 위해 Grid를 사용할 수 있다.
+
+## Grid Container
+### display
+* 그리드 컨테이너를 정의한다.
+* grid : block 특성의 그리드 컨테이너를 정의
+* inline-grid : inline 특성의 Grid Container를 정의
+
+### grid-template-rows
+* 명시적 행의 크기를 정의
+* 대괄호 []를 이용하여 선의 이름을 정할 수 있다.
+* fr(공간 비율) 단위를 사용할 수 있다.
+* repeat() 함수를 사용할 수 있다.
+
+### grid-template-columns
+* 명시적 열의 크기를 정의
+* 대괄호 []를 이용하여 선의 이름을 정할 수 있다.
+* fr(공간 비율) 단위를 사용할 수 있다.
+* repeat() 함수를 사용할 수 있다.
+
+```css
+.container {
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 100px);
+
+	/* 100px 200px 100px 200px */
+	grid-template-columns: repeat(2, 100px 200px);
+}
+```
+
+
+* 행은 100픽셀씩 3분할 하고, 열은 1:1:1 비율로 설정한다.
+
+### grid-template-areas
+* 지정된 그리드 영역 이름(grid-area)을 참조해 그리드 템플릿을 생성한다.
+* grid-area는 컨테이너가 아닌 아이템에 적용하는 속성
+* .를 사용하거나 명시적으로 none을 입력해 빈 영역을 정의할 수 있다.
+
+```css
+.container {
+  display: grid;
+  grid-template-rows: repeat(3, 100px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas:
+  "header header header"
+  "main main aside"
+  "footer footer footer"
+}
+.items {
+  border: 10px solid red;
+}
+.items:nth-child(1) {
+  grid-area: header;
+}
+.items:nth-child(2) {
+  grid-area: main;
+}
+.items:nth-child(3) {
+  grid-area: aside;
+}
+.items:nth-child(4) {
+  grid-area: footer;
+}
+```
+
+### row-gap
+* 행과 행 사이의 간격을 지정
+
+### column-gap
+* 열과 열 사이의 간격을 지정
+
+```css
+/* 단축속성 gap */ 
+gap: row-gap column-gap;
+```
+
+### grid-auto-rows
+* 암시적 행의 크기를 정의
+
+### grid-auto-columns
+* 암시적 열의 크기를 정의
+* 암시적 크기가 적용된 행과 열은 양수 라인 번호만 사용할 수 있다.
+
+### grid-auto-flow
+* 배치하지 않은 아이템을 어떤 방식의 자동 배치 알고리즘으로 정의할지 정의한다.
+* 배치한 아이템은 grid-area를 사용한 아이템을 의미
+* row : 각 행 축을 따라 차례로 배치. 기본값
+* row dense : row와 같지만, 빈 영역을 채움
+* column : 각 열 축을 따라 차례로 배치
+* column dense : column과 같지만, 빈 영역을 채움
+
+### grid-template
+* grid-template-rows, grid-template-columns, grid-template-areas의 단축 속성
+
+```css
+.container {
+  grid-template: <grid-template-rows> / <grid-template-columns>;
+  grid-template: <grid-template-areas>;
+}
+
+.container {
+  display: grid;
+  grid-template:
+    "header header header" 80px
+    "main main aside" 350px
+    "footer footer footer" 130px
+    / 2fr 100px 1fr;
+}
+```
+
+### grid
+* grid-template-xxx와 grid-auto-xxx의 단축 속성
+
+```css
+.container {
+  grid: <grid-template>;
+  grid: <grid-template-rows> / <grid-auto-flow> <grid-auto-columns>;
+  grid: <grid-auto-flow> <grid-auto-rows> / <grid-template-columns>;
+}
+```
+* grid-auto-flow를 작성할 때는 auto-flow 키워드를 사용한다.
+* /로 구분해 작성하는 위치가 곧 row, column 값을 의미한다.
+* 그래서 row, column 값은 작성하지 않는다.
+* dense 값은 auto-flow 뒤에 붙여준다.
+
+### align-content
+* 그리드 콘텐츠를 수직 정렬
+* 그리드 콘텐츠의 세로 너비가 그리드 컨테이너보다 작아야 한다.
+* normal : stretch와 같다.
+* start : 시작점 정렬
+* center : 수직 중앙 정렬
+* end : 끝점 정렬
+* space-around : 각 행 위아래에 여백을 고르게 정렬
+* space-between : 첫 행은 시작점, 끝 행은 끝점에 정렬되고 나머지 여백으로 고르게 정렬
+* space-evenly : 모든 여백을 고르게 정렬
+
+### justify-content
+* 그리드 콘텐츠를 수평 정렬
+* 그리드 콘텐츠의 가로 너비가 그리드 컨테이너보다 작아야 한다.
+* 속성은 align-content와 같이 사용된다.
+
+### align-items
+* 그리드 아이템들을 수직 정렬
+* 그리드 아이템의 세로 너비가 자신이 속한 그리드 행의 크기보다 작아야 한다.
+* normal : stretch와 같다.
+* start : 시작점 정렬
+* center : 수직 중앙 정렬
+* end : 끝점 정렬
+
+### justify-items
+* 그리드 아이템들을 수평 정렬
+* 그리드 아이템의 가로 너비가 자신이 속한 그리드 열의 크기보다 작아야 한다.
+* normal : stretch와 같다.
+* start : 시작점 정렬
+* center : 수직 중앙 정렬
+* end : 끝점 정렬
+
+
+## Grid items
+### grid-row
+* grid-row-start과 grid-row-end의 단축 속성
+* 각 속성을 /로 구분해야 한다.
+
+```css
+.item {
+	grid-row-start: span 3;
+	grid-row-end: 4;
+}
+.item {
+	grid-row: span 3 / 4;
+}
+.item {
+	grid-row: 1 / 4;
+}
+```
+* 모두 같은 의미이다.
+
+### grid-column 
+* grid-column-start과 grid-column-end의 단축 속성
+
+### grid-area
+* grid-row-start, grid-row-end, grid-column-start, grid-column-end의 단축 속성
+* 혹은 grid-template-areas가 참조할 영역 이름을 설정할 수도 있다.
+* 영역 이름 설정 시, grid-row와 grid-column 개념은 무시된다.
+
+```css
+.item {
+	grid-area: <grid-row-start> / <grid-column-start> / <grid-row-end> / <grid-column-end>;	
+}
+```
+
+### align-self
+* 단일 그리드 아이템을 수직 정렬
+* 그리드 아이템의 세로 너비가 자신이 속한 그리드 행의 크기보다 작아야 한다.
+* 속성은 align-items와 같다.
+
+### justify-self
+* 단일 그리드 아이템을 수평 정렬
+* 그리드 아이템의 가로 너비가 자신이 속한 그리드 열의 크기보다 작아야 한다.
+* 속성은 justify-items와 같다.
+
+### order
+* 그리드 아이템이 자동 배치되는 순서를 변경할 수 있다.
+* 숫자가 작을수록 앞서 배치
+
+### z-index
+* 아이템이 쌓이는 순서를 변경
+* 클수록 앞에 쌓임
+
+## Grid Functions
+### repeat
+* repeat() 함수는 행/열의 크기 정의를 반복한다.
+* 반복되는 횟수와 행/열의 크기 정의를 인수로 사용
+* grid-template-rows와 grid-template-columns에서 사용
+
+### minmax
+* minmax() 함수는 행/열의 최소/최대 크기를 정의
+* 첫 번째 인수는 최솟값이고 두 번째 인수는 최댓값이다.
+* grid-template-rows ,grid-template-columns, grid-auto-rows, grid-auto-columns에서 사용
+
+```css
+.container {
+  grid-template-columns: minmax(100px, 1fr) minmax(200px, 1fr);
+}
+```
+
+### fit-content
+* fit-content() 함수는 행/열의 크기를 그리드 아이템이 포함하는 내용 크기에 맞춤
+* 내용의 최대 크기를 인수로 사용
+
+```css
+.container {
+  grid-template-columns: fit-content(300px) fit-content(300px);
+}
+```
+
+## 그리드 단위
+### fr
+* 사용 가능한 공간에 대한 비율
+
+```css
+.container {
+  grid-template-columns: 1fr 2fr 100px 25%;
+}
+```
+* 그리드 컨테이너의 3번째 컬럼에 100px, 4번째 컬럼에 25%를 사용하고 남은 공간을 1번째 컬럼에 ‘1/3’,  2번째 컬럼에 ‘2/3’ 만큼 사용
+
+### min-content, max-content
+* 그리드 아이템이 포함하는 내용의 최소, 최대 크기를 의미
+
+```css
+.container {
+  grid-template-columns: min-content 1fr;
+}
+```
+
+### auto-fill, auto-fit
+* 행/열 개수를 그리드 컨테이너 및 행/열 크기에 맞게 자동으로 조정
+* repeat() 함수와 같이 사용하며, 행/열과 아이템 개수가 명확할 필요가 없을 경우 유용
+* auto-fill과 auto-fit은 간단한 차이점을 제외하면 동일하게 동작
+* repeat의 첫 번째 인수를 auto-fill이나 auto-fit으로 하면 컨테이너 크기가 아이템들을 수용하기 충분하지 않을 경우 아이템을 자동으로 줄 바꿈 처리하고, 그에 맞게 암시적 행/열도 자동으로 수정
+
+#### auto-fill과 auto-fit의 차이
+* auto-fill과 auto-fit은 차이점은 그리드 컨테이너가 하나의 행/열에 모든 아이템을 수용하고 남는 공간이 있을 때 auto-fill은 남는 공 간을 그대로 유지하고, auto-fit은 남는 공간을 축소한다.
