--- a/_posts/2021-06-1-0531-0606.md
+++ b/_posts/2021-06-1-0531-0606.md
@@ -908,3 +908,394 @@ gap: row-gap column-gap;
 
 #### auto-fill과 auto-fit의 차이
 * auto-fill과 auto-fit은 차이점은 그리드 컨테이너가 하나의 행/열에 모든 아이템을 수용하고 남는 공간이 있을 때 auto-fill은 남는 공 간을 그대로 유지하고, auto-fit은 남는 공간을 축소한다.
+
+## 0603
+# 역량테스트 준비 10일차
+내일이면 테스트 당일이다.  
+10일간의 길지 않은 준비기간이었지만, 배운 점도 많고 좋은 시간이었다.  
+열심히 썼던 자기소개서를 다듬고 제출하였다.  
+열심히 준비한만큼 좋은 결과가 있었으면 좋겠다.
+# SASS
+## 개요
+* Sass는 전처리기. CSS가 동작하기 전에 사용하는 기능으로, 웹에서는 CSS가 동작하지만 CSS의 불편함을 확장 기능으로 상쇄해주는 것이다.
+* 웹에서는 CSS만 동작하기 때문에 Sass로 코딩한 뒤, CSS로 컴파일해서 동작시킨다.
+
+### Sass와 SCSS의 차이점
+* SCSS는 Sass의 모든 기능을 지원하는 CSS의 상위집합이다.
+* CSS와 거의 같은 문법으로 Sass 기능을 지원
+* SCSS는 중괄호와 세미콜론이 있는 반면, Sass는 유효범위를 들여쓰기로 구분한다.
+* 믹스인 기능을 사용할 때, SCSS는 @mixin과 @include로 기능을 사용하지만 Sass는 =와 +기호로 기능을 사용
+
+## 문법
+### 주석
+* Sass는 JavaScript처럼 두 가지 스타일의 주석을 사용한다.
+
+```sass
+// 컴파일되지 않는 주석
+/* 컴파일되는 주석 */
+```
+* Sass의 경우 컴파일되는 여러 줄 주석을 사용할 때 각 줄 앞에 *를 붙여야 하고, 라인을 맞춰줘야 하지만 SCSS는 그럴 필요가 없다.
+
+### 데이터 종류
+* Numbers : 숫자
+	* 숫자에 단위가 있거나 없다.
+* Strings : 문자
+	* 문자에 따옴표가 있거나 없다.
+* Colors : 색상 표현
+* Booleans : 논리
+* Nulls : 아무것도 없음
+	* 속성값으로 null이 사용되면 컴파일하지 않는다.
+* Lists : 공백이나 ,로 구분된 값의 목록
+	* ()를 붙이거나 붙이지 않는다.
+	* 	ex) (apple, orange)  , apple orange
+* Maps : Lists와 유사하나 값이 key: value 형태
+	* ()를 꼭 붙여야 한다.
+	* ex) (apple: a, orange: o)
+
+### 중첩
+* Sass는 중첩 기능을 사용할 수 있다.
+* 상위 선택자의 반복을 피하고 편리하게 복잡한 구조를 작성할 수 있다.
+
+```scss
+.section {
+	width: 100%;
+	.list {
+		padding: 20px;
+	}
+}
+```
+
+### 상위 선택자 참조
+* 중첩 안에서 & 키워드는 상위 선택자를 참조하여 치환한다.
+
+```scss
+.btn {
+  position: absolute;
+  &.active {
+    color: red;
+  }
+}
+
+/* 컴파일 후 */
+.btn {
+  position: absolute;
+}
+.btn.active {
+  color: red;
+}
+```
+
+### at-root (중첩 벗어나기)
+* 중첩에서 벗어나고 싶을 때 @at-root 키워드를 사용한다.
+* 중첩 안에서 생성해서 중첩 밖에서 사용해야 하는 경우 유용
+
+```scss
+.list {
+    $w: 100px;
+    $h: 50px;
+    li {
+        width: $w;
+        height: $h;
+    }
+    @at-root .box {
+        width: $w;
+        height: $h;
+    }
+};
+
+/* 컴파일 후 */
+.list li {
+  width: 100px;
+  height: 50px;
+}
+.box {
+  width: 100px;
+  height: 50px;
+}
+```
+
+### 중첩 속성
+* font-, margin- 등과 같이 동일한 네임 스페이스를 가지는 속성들을 다음과 같이 사용할 수 있다.
+
+```scss
+.box {
+    font: {
+        weight: bold;
+        size: 10px;
+        family: sans-serif;
+    };
+}
+
+/* 컴파일 후 */
+.box {
+  font-weight: bold;
+  font-size: 10px;
+  font-family: sans-serif;
+}
+```
+
+### 변수
+* 반복적으로 사용되는 값을 변수로 지정할 수 있다.
+* 변수 이릅 앞에는 항상 $를 붙인다.
+
+```scss
+$color-primary: #e96900;
+$url-images: "/assets/images/";
+$w: 200px;
+
+.box {
+    width: $w;
+    margin-left: $w;
+    background: $color-primary url($url-images + "bg.jpg");
+}
+
+/* 컴파일 후 */
+.box {
+  width: 200px;
+  margin-left: 200px;
+  background: #e96900 url("/assets/images/bg.jpg");
+}
+```
+
+#### 유효 범위
+* 변수는 선언된 블록 {} 내에서만 유효범위를 가진다.
+
+#### 변수 재 할당
+* 한 번 할당한 변수를 다른 변수에 다시 재 할당할 수 있다.
+
+#### !global (전역 설정)
+* !global 플래그를 사용하면 변수의 유효범위를 전역으로 설정할 수 있다.
+
+#### !default (초깃값 설정)
+* !default 플래그는 할당되지 않은 변수의 초깃값을 설정한다.
+* 할당되어있는 변수가 있다면 변수가 기존 할당 값을 사용한다.
+* 변수의 값을 설정하겠지만, 기존 변수가 있을 경우에는 적용하지 않겠다는 의미와 같다.
+
+#### #{} 문자 보간
+* 문자 보간법을 이용해서 코드의 어디든지 변수 값을 넣을 수 있다.
+
+### 가져오기(Import)
+* @import로 외부에서 가져온 Sass 파일은 모두 단일 CSS 출력 파일로 병합된다.
+* 가져온 파일에 정의된 모든 변수 또한 Mixins 등을 주 파일에서 사용할 수 있다.
+* Sass @import는 기본적으로 Sass 파일을 가져오는데, CSS @import 규칙으로 컴파일되는 몇 가지 상황이 있다.
+	* 파일 확장자가 .css일 때
+	* 파일 이름이 `http://`로 시작되는 경우
+	* url()이 붙었을 경우
+	* 미디어쿼리가 있는 경우
+* 파일 이름을 ,로 구분하여 여러 파일을 가져올 수도 있다.
+
+### 파일 분할
+* 프로젝트 규모가 커지면 파일을 나눠서 관리하는데, 모든 파일 컴파일 시 각각의 .css 파일로 나눠서 저장된다면 문제가 될 수 있다.
+* 그래서 파일 이름 앞에 _를 붙여 _header.scss와 같이 가져오면 컴파일 시 ~.css 파일로 컴파일 하지 않는다.
+
+### 연산
+* Sass는 기본적인 연산 기능을 지원한다.
+* 산술 연산자 : +, -, *, /, % - 곱하기는 하나 이상의 값이 반드시 숫자여야 하고, 나누기는 오른쪽 값이 반드시 숫자
+* 비교 연산자 : ==, !=, <, >, <=, >=
+* 논리  연산자 : and, or, not
+
+#### 숫자
+* 일반적으로 px 단위로 연산을 합니다만, 상대적 단위(%, em)의 연산의 경우 CSS calc()로 연산해야 함
+* 나누기 연산의 경우 다음과 같은 조건을 충족해야 함
+	* 값 또는 그 일부가 변수에 저장되거나 함수에 의해 반환
+	* 값이 ()로 묶여있는 경우
+	* 값이 다른 산술 표현식의 일부로 사용
+
+#### 문자
+* 문자 연산에는 +가 사용
+* 문자 연산의 첫 번째 피연산자에 따옴표가 붙어있다면 연산 결과에 따옴표로 묶는다.
+* 첫 번째 피연산자에 따옴표가 붙어있지 않다면 연산 결과도 따옴표를 처리하지 않는다.
+
+#### 색상
+* rgba에서 alpha 값은 연산되지 않으며 서로 동일해야 다른 값의 연산이 가능
+* alpha 값을 연산하기 위한 색상 함수를 사용해야 한다.
+
+### 재활용(Mixins)
+* 스타일 시트 전체에서 재사용 할 CSS 선언 그룹을 정의하는 기능
+
+#### 선언
+```scss
+// SCSS
+@mixin 믹스인이름 {
+	스타일;
+}
+
+// Sass
+=믹스인이름
+	스타일
+```
+
+#### @include
+* 선언된 믹스인을 사용하기 위해서 필요
+
+```scss
+// SCSS
+@include 믹스인이름;
+
+// Sass
++믹스인이름
+```
+
+#### 인수
+* Mixin은 함수처럼 인수를 가질 수 있다.
+* 하나의 Mixin으로 다양한 결과를 만들 수 있다.
+* 인수는 기본값을 가질 수 있다.
+* @include 포함 단계에서 별도의 인수가 전달되지 않으면 기본값이 사용된다.
+* 전달할 인수를 입력할 때 명시적으로 키워드를 입력하여 작성할 수 있다.
+* 입력할 인수의 개수가 불확실한 경우 가변 인수 ...를 사용할 수 있다.
+
+```scss
+// SCSS
+@mixin 믹스인이름($매개변수: 기본값) {
+  스타일;
+}
+@include 믹스인이름(인수);
+
+// Sass
+=믹스인이름($매개변수: 기본값)
+  스타일
+
++믹스인이름(인수)
+```
+
+#### @content
+* 선언된 Mixin에 @content이 포함되어 있다면 해당 부분에 원하는 스타일 블록을 전달할 수 있다.
+
+```scss
+@mixin icon($url) {
+  &::after {
+    content: $url;
+    @content;
+  }
+}
+.icon1 {
+  // icon Mixin의 기존 기능만 사용
+  @include icon("/images/icon.png");
+}
+.icon2 {
+  // icon Mixin에 스타일 블록을 추가하여 사용
+  @include icon("/images/icon.png") {
+    position: absolute;
+  };
+}
+```
+
+### 확장
+* 특정 선택자가 다른  선택자의 모든 스타일을 가져야하는 경우 사용
+```scss
+.btn {
+  padding: 10px;
+  margin: 10px;
+  background: blue;
+}
+.btn-danger {
+  @extend .btn;
+  background: red;
+}
+```
+* 부작용을 가지고 있을 수 있기 때문에 사용을 권장하지 않는다.
+
+### 함수
+* 함수는 Mixins와 거의 유사하지만 반환되는 내용이 다르다.
+* Mixin은 지정한 스타일을 반환하는 반면, 함수는 보통 연산된 특정 값을 @return 지시어를 통해 반환
+
+```scss
+$max-width: 980px;
+
+@function columns($number: 1, $columns: 12) {
+  @return $max-width * ($number / $columns)
+}
+
+.box_group {
+  width: $max-width;
+
+  .box1 {
+    width: columns();  // 1
+  }
+  .box2 {
+    width: columns(8);
+  }
+  .box3 {
+    width: columns(3);
+  }
+}
+```
+
+### 조건과 반복
+#### if (함수)
+* 조건의 값에 따라 표현식 중 하나만 반환.
+* 조건의 값이 true 이면 표현식1을, false이면 표현식2를 실행
+
+```scss
+$width: 555px;
+div {
+  width: if($width > 300px, $width, null);
+}
+```
+
+
+#### if(지시어)
+* 조건에 따른 분기 처리가 가능하며, @else, if와 같이 사용할 수 있다.
+
+#### @for
+* 스타일을 반복적으로 출력
+* through를 사용하는 방식은 through까지, to는 주어진 값 직전까지만 반복해서 사용
+
+```scss
+// 1부터 3번 반복
+@for $i from 1 through 3 {
+  .through:nth-child(#{$i}) {
+    width : 20px * $i
+  }
+}
+
+// 1부터 3 직전까지만 반복(2번 반복)
+@for $i from 1 to 3 {
+  .to:nth-child(#{$i}) {
+    width : 20px * $i
+  }
+}
+```
+
+#### each
+* List와 Map 데이터를 반복할 때 사용
+
+```scss
+// List Data
+$fruits: (apple, orange, banana, mango);
+
+.fruits {
+  @each $fruit in $fruits {
+    li.#{$fruit} {
+      background: url("/images/#{$fruit}.png");
+    }
+  }
+}
+
+$fruits-data: (
+  apple: korea,
+  orange: china,
+  banana: japan
+);
+
+@each $fruit, $country in $fruits-data {
+  .box-#{$fruit} {
+    background: url("/images/#{$country}.png");
+  }
+}
+```
+* Map 데이터를 반복할 경우 하나의 데이터에 두 개의 변수가 필요
+
+#### @while
+* 조건이 false로 평가될 때까지 내용을 반복
+
+```scss
+$i: 6;
+
+@while $i > 0 {
+  .item-#{$i} {
+    width: 2px * $i;
+  }
+  $i: $i - 2;
+}
+```
