--- a/_posts/2021-06-1-0531-0606.md
+++ b/_posts/2021-06-1-0531-0606.md
@@ -1299,3 +1299,10 @@ $i: 6;
   $i: $i - 2;
 }
 ```
+
+## 0604
+# 역량테스트를 마치며
+이번 테스트를 준비하며 HTML, CSS에 대한 기본 개념을 확실히 잡았다.   
+또한 자기소개서를 작성하며 새로운 경험을 한 것 같다.  
+이전에 이런 프로그램에 지원했을 때에 비해 쓸 내용이 많아진 것으로 봐서는 지금까지 열심히 해왔다는 생각이 들어서 뿌듯했다.  
+최선을 다한만큼 좋은 결과가 있으면 좋겠다고 기대해본다.  
