--- a/_posts/2021-06-1-0531-0606.md
+++ b/_posts/2021-06-1-0531-0606.md
@@ -1306,3 +1306,17 @@ $i: 6;
 또한 자기소개서를 작성하며 새로운 경험을 한 것 같다.  
 이전에 이런 프로그램에 지원했을 때에 비해 쓸 내용이 많아진 것으로 봐서는 지금까지 열심히 해왔다는 생각이 들어서 뿌듯했다.  
 최선을 다한만큼 좋은 결과가 있으면 좋겠다고 기대해본다.  
+
+## 0605
+# MongoDB
+## 데이터베이스 파티셔닝
+* 데이터베이스를 분리하여 여러 서버에 분산 저장 및 관리하는 기술
+
+### 파티셔닝의 2가지 유형
+1. 수직 파티셔닝
+* 하나의 테이블의 컬럼들을 여러 테이블로 분리하는 방법
+* RDB에서 많이 사용하는 방법
+
+2. 수평 파티셔닝(= 샤딩)
+* 로우 별로 데이터베이스를 분할하는 방법
+* 샤드 : 분할된 각 데이터 조각을 의미하며 둘 이상의 서버에 분산 저장
