--- a/_posts/2021-06-1-0531-0606.md
+++ b/_posts/2021-06-1-0531-0606.md
@@ -1320,3 +1320,23 @@ $i: 6;
 2. 수평 파티셔닝(= 샤딩)
 * 로우 별로 데이터베이스를 분할하는 방법
 * 샤드 : 분할된 각 데이터 조각을 의미하며 둘 이상의 서버에 분산 저장
+
+## 0606
+# Sharding in mongoDB
+* a method for distributing data across multiple machines by horizontal scaling to meet the demands of data growth
+* adds more machines (scale out) to support data growth and the demands of read and write operations
+* for storage and load distribution
+
+## 샤드 클러스터
+* shards
+	* contains a subset of the shared data and can be deployed as a replica set
+* config servers
+	* store metadata persistently and configuration settings for the cluster
+* routers (mongos)
+	* cache the cluster metadata from config servers and act as a query router, providing an interface between client applications and the shared cluster.
+* 샤드 키
+	* used to distribute the collections's documents across shards
+	* consists of a field or fields that exist in every document in the target collection
+* 청크
+	* a contiguous range of shard key values within a particular shard
+	* each chunk has an inclusive lower and exclusive upper range based on the shard key
