--- a/_posts/2021-06-09-0607-0613.md
+++ b/_posts/2021-06-09-0607-0613.md
@@ -30,3 +30,28 @@ category: TIL
 2. Hashed sharding
 	* computing a hash of the shard key field's value
 	* Each chunk is then assigned a range based on the hashed shard key values
+
+## 0608
+## MongoDB 백업
+### 백업을 위한 명령 mongodump
+* dumps the entire data of your server into the dump directory
+* 백업 단위 선택 가능 : 컬렉션 / 데이터베이서 / 전체 데이터베이스 단위
+
+### 백업된 데이터의 복원 명령 mongorestore
+* restores all of the data from the backup directory
+* mongodump and mongorestore are not ideal for capturing backups of larger systems.
+
+## mongodb에서 데이터 모델링
+* always consider the application usage of the data as well as the inherent structure of the data itself.
+* flexible schema in MongoDB
+* two types of data models in MongoDB
+	* embedded (de-normalized) data model
+	* referenced (normalized) data model
+
+### Embedded Relationships
+* embeds all the related data in a single document, which makes it easy to retrieve and maintain
+* stores the relationships between data by storing related data in a single document structure
+
+### Referenced Relationships
+* stores the relationships between data by including links or references from one document to another
+* both the user and address documents will be maintained separately but the user document will contain a field that will reference the address document's id field.
