--- a/_posts/2021-06-09-0607-0613.md
+++ b/_posts/2021-06-09-0607-0613.md
@@ -55,3 +55,19 @@ category: TIL
 ### Referenced Relationships
 * stores the relationships between data by including links or references from one document to another
 * both the user and address documents will be maintained separately but the user document will contain a field that will reference the address document's id field.
+
+## 0609
+## Database References
+* For many use cases in MongoDB
+	* the denormalized data model where related data is stored within a single document will be optimal
+	* in some cases, it makes sense to store related information in separate documents, typically in different collections or databases
+* two methods for relating documents in mongoDB applications
+	* manual references
+	* DBRefs
+
+### Using DBRefs
+* 다음 3개의 필드를 포함하는 문서 형식으로 참조 관계를 명세해야 함
+* $ref 필드 : 참조되는 문서가 속한 컬렉션 이름
+* $id 필드 : 참조되는 문서의 _Id 필드
+* $db 필드 : 참조되는 문서가 속한 데이터베이스 이름 (옵션)
+* 필드 순서를 주의해서 사용해야 한다.
