--- a/_posts/2021-06-09-0607-0613.md
+++ b/_posts/2021-06-09-0607-0613.md
@@ -71,3 +71,27 @@ category: TIL
 * $id 필드 : 참조되는 문서의 _Id 필드
 * $db 필드 : 참조되는 문서가 속한 데이터베이스 이름 (옵션)
 * 필드 순서를 주의해서 사용해야 한다.
+
+## 0610
+### covered query
+* 인덱스만 이용해서도 처리가 가능한 질의 (데이터베이스 접근 없음)
+* 질의 처리에 필요한 모든 데이터가 인덱스에 있을 때 '이 인덱스가 해당 질의를 커버한다'라고 함
+* An index covers a query when all of the following apply:
+	* all the fields in the query are part of an index, and
+	* all the fields returned in the results are in the same index
+	* no fields in the query are equal to null
+
+### 질의 분석
+* Analyzing queries is a very important aspect of measuring how effective the database and indexing design is
+* explain() 메소드
+	* provides information on the query, indexes used in a query and other statistics
+	* very useful when analyzing how well your indexes are optimized
+* hint() 메소드
+	* forces the query optimizer to use the specified index to run a query
+	* particularly useful when you want to test performance of a query with different indexes
+
+### Advanced Indexing
+1. 배열의 각 요소 마다 인덱스 엔트리 유지 -> multikey Index로 구성
+	* 배열의 각 요소 마다 인덱스 엔트리 유지	
+2. 서브 문서를 필드 값으로 갖는 인덱싱
+	* 서브 문서의 모든 필드들에 대한 인덱스 생성
