--- a/_posts/2021-06-09-0607-0613.md
+++ b/_posts/2021-06-09-0607-0613.md
@@ -95,3 +95,13 @@ category: TIL
 	* 배열의 각 요소 마다 인덱스 엔트리 유지	
 2. 서브 문서를 필드 값으로 갖는 인덱싱
 	* 서브 문서의 모든 필드들에 대한 인덱스 생성
+
+## 0611
+# 패스트캠퍼스 네카라쿠배 취업스쿨 1차 합격
+2주 동안의 노력에 대한 결실을 맺었다.  
+글을 쓰는 재주가 없어 자기소개서에 대한 자신감이 없었기에 큰 기대를 하지 않았지만 통과를 했다.  
+기대를 하지 않았다고는 했지만 합격했다는 메세지를 봤을 때, 기쁘면서 자존감이 올라갔다.  
+2차 테스트는 향후 코딩테스트에 필요한 파이썬과 자료구조에 대한 내용으로 2주간 테스트를 진행한다고 한다.  
+파이썬은 익힐까말까 많이 고민했던 언어이고, 자료구조에 대한 학습은 필수적이었기에 이번 기회에 제대로 공부해보려고 한다.  
+1차테스트에 합격한만큼, 2차테스트는 더 열심히 준비해서 꼭 붙어야겠다는 욕심이 생겼다.  
+후회하지 않도록 최선을 다해서 꼭 통과해야겠다.
