--- a/_posts/2021-06-09-0607-0613.md
+++ b/_posts/2021-06-09-0607-0613.md
@@ -105,3 +105,6 @@ category: TIL
 파이썬은 익힐까말까 많이 고민했던 언어이고, 자료구조에 대한 학습은 필수적이었기에 이번 기회에 제대로 공부해보려고 한다.  
 1차테스트에 합격한만큼, 2차테스트는 더 열심히 준비해서 꼭 붙어야겠다는 욕심이 생겼다.  
 후회하지 않도록 최선을 다해서 꼭 통과해야겠다.
+
+## 0612 ~ 0613
+기말고사 기간
