--- a/_posts/2021-06-14-0614-0620.md
+++ b/_posts/2021-06-14-0614-0620.md
@@ -294,3 +294,322 @@ Ncby
 * [::2]는 모두 출력하되 2칸씩 인덱스를 건너서 출력한다.
 
 
+## 0615
+# 테스트 2차 준비 2일차
+기말고사와 함께 테스트를 준비하려니 너무 타이트하고 힘들다.  
+수요일이 지나야 조금 숨통이 틀 거 같다는 생각이 든다.  
+방금 테스트를 보고 왔는데, 코딩 문제를 아쉽게 못 풀고 3분뒤에 문제를 풀었다.  
+너무 아쉽다는 생각과 동시에 더 열심히 해야겠다는 생각이 들었다.  
+내일은 더 열심해 해서 다 맞을 수 있도록 노력해야겠다.
+
+## 리스트
+* 순서가 있고, 중복이 가능하다.
+* 수정과 삭제가 가능하여 많이 사용된다.
+
+### 선언
+```python
+a = []
+b = list()
+c = [1, 10, 'a']
+```
+* 주로 대괄호를 이용하여 선언한다.
+* 타입을 혼용하여 같은 리스트에 선언할 수 있다.
+* 리스트안에 리스트를 중첩하여 선언할 수 있다.
+
+### 인덱싱
+* 리스트의 인덱싱은 문자열에서처럼 0번 인덱스부터 시작해서 1씩 증가한다. 우측부터 접근시 -1부터이다.
+* 중첩 리스트에 접근하고 싶을 때는 2차원 배열 형태로 접근하면 된다. ex) a[0][2]
+* 슬라이싱도 문자열과 비슷한 방법으로 사용하고 적용된다.
+
+### 연산
+* 리스트와 리스트를 더하면 하나의 리스트로 합쳐지고 내부의 값은 이어진다.
+* 리스트에 숫자를 곱하면 해당 숫자만큼 리스트가 이어져서 하나의 리스트로 출력된다.
+
+### 수정, 삭제
+```python
+c = [1, 2, 3, 4]
+
+c[0] = 77
+print(c)
+c[1:2] = ['a', 'b', 'c']
+print(c)
+c[1] = ['a','b','c']
+print(c)
+c[1:3] = []
+print(c)
+del c[1]
+print(c)
+
+# 결과
+[77, 2, 3, 4]
+[77, 'a', 'b', 'c', 3, 4]
+[77, ['a', 'b', 'c'], 'b', 'c', 3, 4]
+[77, 'c', 3, 4]
+[77, 3, 4]
+```
+* 리스트 값의 수정은 해당 인덱스에 값을 덮어쓰면 된다.
+* 다만 덮어쓰는 값이 리스트일 때는 중첩 리스트로 값이 수정된다.
+* 덮어쓰는 값이 리스트고, 인덱스 범위지정을 슬라이싱을 이용해서 하면 중첩 리스트가 아닌 이어진 값으로 수정된다.
+* 삭제하는 방법은 인덱스 범위지정을 슬라이싱해서 빈 대괄호를 입력하는 것과, del를 사용하는 방법이 있다.
+
+### 함수
+```python
+a = [5, 2, 3, 1, 4]
+
+a.append(6)
+print(a)
+a.sort()
+print(a)
+a.reverse()
+print(a)
+a.insert(2, 7)
+print(a)
+a.remove(1)
+print(a)
+b = a.pop()
+print(b)
+print(a)
+ex = [8,9]
+a.extend(ex)
+print(a)
+print(a.index(4))
+print(a.count(9))
+
+#결과
+[5, 2, 3, 1, 4, 6]
+[1, 2, 3, 4, 5, 6]
+[6, 5, 4, 3, 2, 1]
+[6, 5, 7, 4, 3, 2, 1]
+[6, 5, 7, 4, 3, 2]
+2
+[6, 5, 7, 4, 3]
+[6, 5, 7, 4, 3, 8, 9]
+3
+1
+```
+* `append(x)` : 리스트의 끝에 x 값을 삽입
+* `pop()` : 리스트 끝에 있는 값을 꺼내고, 그 값을 반환
+* `insert(x, y)` : x 인덱스에 y 값을 삽입. 그 뒤에 값들은 한 칸씩 밀림
+* `remove(x)` : x 값을 리스트 앞에서부터 찾아서 찾으면 한 개만 삭제. del은 인덱스로 삭제한다면 remove는 값으로 삭제
+* `extend(x)` : 리스트 x를 기존 리스트에 이어서 값을 삽입. append의 매개변수 값으로 리스트를 삽입한다면 중첩 리스트로 삽입된다는 것이 차이점
+* `sort()` : 값을 오름차순으로 정렬
+* `reverse()` : 값을 내림차순으로 정렬
+* `index(x)` : x를 리스트에서 찾아서 존재한다면 x의 인덱스 값을 반환. 없다면 에러
+* `count(x)` : 리스트에 존재하는 x의 개수 반환
+
+## 튜플
+* 순서가 있고, 중복이 가능하다.
+* 리스트와의 가장 큰 차이점은 수정 및 삭제가 되지 않는다는 점
+* 인덱싱과, 연산은 리스트와 사용법이 같다.
+* 함수는 index와 count 정도만 사용 가능하다.
+
+### 선언
+```python
+a = ()
+b = (1,)
+c = (1, 2, 3, 4)
+d = (10, 100, ('a', 'b'))
+```
+* 리스트는 대괄호로 선언한다면, 튜플은 소괄호로 선언한다.
+* 튜플 역시 중복 튜플이 가능하다.
+
+## 딕셔너리
+* 키와 값으로 구성되어 있다.
+* 순서도 존재하지 않고, 키의 중복도 불가능하다.
+* Json 형태와 비슷하다.
+
+### 선언
+```python
+a = {'name': 'Kim', 'Phone': '010-1234-1234', 'birth': 870214}
+b = {0: 'Hello Python', 1: 'Hello Coding'}
+c = {'arr': [1,2,3,4,5]}
+```
+* 중괄호로 선언하고, 키: 값 형태로 선언한다.
+* 키를 숫자형으로 선언할수도 있지만 잘 사용하지는 않는다.
+* 값으로는 문자열 말고도 숫자나 리스트, 튜플 모두 가능하다.
+
+### 출력
+```python
+print(a['name'])
+print(a.get('name'))
+```
+* 값을 받는 두 가지 방법이 있는데, 인덱스처럼 안에 키를 넣어서 받는 방법과 get() 메소드를 사용하는 방법이 있다.
+* 하지만 첫 번째 방법의 경우 해당하는 키가 없을 경우 에러를 반환하고, get() 메소드는 None을 반환하기 때문에 두 번째 방법이 안전하다는 이유로 더 많이 사용된다.
+
+### 딕셔너리 추가
+* `a['새로운키'] = 값` 형식으로 간단하게 추가할 수 있다.
+
+### keys, values, items
+```python
+print(a.keys())
+print(a.values())
+print(a.items())
+
+# 결과
+dict_keys(['name', 'Phone', 'birth'])
+dict_values(['prak', '010-1234-1234', 870214])
+dict_items([('name', 'prak'), ('Phone', '010-1234-1234'), ('birth', 870214)])
+```
+* keys(), values(), items() 메소드를 사용해서 딕셔너리 안의 키, 값, 키 값 쌍을 모두 꺼내올 수 있다.
+* list() 메소드로 리스트로 형변환해서 주로 사용한다.
+* items()의 경우 리스트로 형변환하면 리스트 안에 튜플로 키, 값이 묶여서 반환된다.
+
+## 집합
+* 순서가 없고, 중복도 없다.
+
+### 선언
+```python
+a = set()
+b = set([1, 2, 3, 4])
+```
+* 집합은 set메소드 안에 리스트 형식으로 값을 넣는 방식으로 선언한다.
+* 주로 리스트나 튜플처럼 다른 것으로 변환해서 사용한다.
+
+### 집합 자료형 활용
+```python
+s1 = set([1,2,3,4,5,6])
+s2 = set([4,5,6,7,8,9])
+
+print(s1 & s2)
+print(s1.intersection(s2))
+print(s1 | s2)
+print(s1.union(s2))
+print(s1 - s2)
+print(s1.difference(s2))
+
+# 결과
+{4, 5, 6}
+{4, 5, 6}
+{1, 2, 3, 4, 5, 6, 7, 8, 9}
+{1, 2, 3, 4, 5, 6, 7, 8, 9}
+{1, 2, 3}
+{1, 2, 3}
+```
+* 각각 교집합, 합집합, 차집합을 뜻한다.
+
+### 추가 & 제거
+* `add(x)` : x를 집합에 추가한다. 중복은 허용하지 않는다.
+* `remove(x)` : x 값을 찾아서 제거한다.
+
+# 흐름 제어
+## 조건문
+### 기본 형식
+```python
+if True:
+	# 이 줄이 실행. 들여쓰기 중요
+
+if False:
+	# 출력되지 않음
+
+if False:
+	# 여기는 실행되지 않음
+else:
+	# 여기가 실행
+```
+* Boolean의 조건으로는 관계연산자도 올 수 있다.
+
+### 참 거짓 종류
+* 참 : "내용", [내용], (내용), {내용}, 1
+* 거짓 : "", [], (), {}, 0, None
+
+### 논리 연산자
+```python
+a = 100
+b = 60
+c = 15
+
+print(a > b and b > c)
+print(a > b or c > b)
+print(not a > b)
+
+# 결과
+True
+True
+False
+```
+* 산술, 관계, 논리의 우선순위는 산술 > 관계 > 논리 순서이다.
+
+### 다중 조건문
+```python
+if 조건1:
+	# 조건1에 부합하면 실행
+elif 조건2:
+	# 조건1에는 맞지 않지만 조건 2에 부합하면 실행
+else:
+	# 조건1,2에 맞지 않으면 실행
+```
+
+### 중첩 조건문
+* 조건문 내에 조건문이 들어간 케이스
+* 들여쓰기로 구분을 잘 해야 한다.
+
+## 반복문
+### 기본 반복문 사용(while, for)
+```python
+# while
+v = 1
+while v < 11:
+	# v 가 11보다 작을동안 계속 반복
+	# 증감식을 써줘서 무한루프를 벗어나도록 해야함
+
+# for
+for v in range(10):
+	# v가 10보다 작을 때까지만 계속 반복. v는 1씩 증가
+
+for v in range(1, 11):
+	# v의 시작값과 끝값을 설정
+
+for v in range(1, 11, 2):
+	# v의 시작값과 끝값, 그리고 몇 씩 증가시킬건지 설정
+```
+
+### 시퀀스(순서가 있는) 자료형 반복
+* 순서가 있는 문자열, 리스트, 튜플과 그리고 집합, 딕셔내리
+* iterable 리턴 함수: range, reversed, enumerate, filter, map, zip
+
+```python
+for 담을변수명 in 시퀀스자료형변수:
+	# 시퀀스자료형변수의 개수만큼 반복해서 출력
+```
+
+* 문자열과 리스트, 튜플의 사용법은 비슷하지만 딕셔내리만 조금 차이점이 있다.
+
+```python
+my_info = {
+	"name": "Kim",
+	"age": 33,
+	"city": "Seoul"
+}
+
+# 기본은 키 반환
+for key in my_info:
+	print(key)
+
+# 값 반환
+for key in my_info.values():
+	print(key)
+
+# 키, 값 반환
+for k, v in my_info.items():
+	print(k, v)
+```
+
+### break, continue
+* break는 반복문 도중 더 이상 반복을 실행하지 않아도 되는 경우 입력하면 반복문을 빠져나가는 명령어이다.
+* continue는 반복문 도중 끝까지 실행하지 않고 다음으로 넘어가야 하는 경우 사용하는 명령어이다.
+
+### for-else
+```python
+numbers = [14, 3, 4, 7, 10, 24, 17, 2, 33, 15, 34, 36, 38]
+
+for num in numbers:
+    if num == 33:  # 45
+        print("found : 33!")
+        break
+    else:
+        print("not found : ", num)
+else:
+    print("Not Found 39...")
+```
+* 파이썬에서는 for-else를 지원하는데, break로 for문을 빠져나가지 못하면 마지막에 else가 실행되는 구문이다.
+
