--- a/_posts/2021-06-14-0614-0620.md
+++ b/_posts/2021-06-14-0614-0620.md
@@ -613,3 +613,303 @@ else:
 ```
 * 파이썬에서는 for-else를 지원하는데, break로 for문을 빠져나가지 못하면 마지막에 else가 실행되는 구문이다.
 
+## 0616
+# 테스트 2차 준비 3일차
+드디어 학교 기말고사를 모두 마쳤다.  
+테스트 2차 준비와 병행하려니 일정이 너무 타이트해서 힘들었다.  
+오늘까지만 잘 이겨내면 내일부터는 좀 더 여유롭게 테스트에만 집중할 수 있을 것 같다.  
+오늘 공부한 함수, 클래스, 상속 부분이 난이도도 있고 엄청 중요한 것 같아서 시험을 보는 데에 걱정이 된다.  
+내일부터는 틀리지 않기 위해서 더 오랜 시간 동안 꼼꼼히 학습해야겠다.  
+
+# 함수 및 람다
+## 함수
+### 정의 방법
+```python
+def function_name(param):
+	# 함수 실행 내용 정의
+
+# 실행
+function_name()
+```
+* 함수를 선언하는 위치가 중요하다. 선언을 하기 전에 함수를 실행하면 에러가 발생
+
+### 반환
+```python
+def hello_return(world):
+    value = "Hello " + str(world)
+    return value
+
+str = hello_return('python')
+print(str)
+
+# 결과
+Hello python
+```
+* 함수는 결과값을 반환해줄 수 있다.
+
+```python
+def func_mul1(x):
+    y1 = x * 2
+    y2 = x * 4
+    y3 = x * 6
+    return y1, y2, y3
+
+val1, val2, val3 = func_mul1(6)
+print(val1, val2, val3)
+
+# 결과
+12 24 36
+
+def func_mul2(x):
+    y1 = x * 2
+    y2 = x * 4
+    y3 = x * 6
+    return (y1, y2, y3)
+
+tup = func_mul2(4)
+print(tup)
+
+# 결과
+(8, 16, 24)
+```
+* 위와 같이 결과값을 여러개 반환해줄 수 있다.
+* 다중 결과를 튜플이나 리스트, 딕셔너리로 묶어서 반환해줄 수 있다.
+
+### *args
+* 함수의 매개변수 앞에 *를 하나 붙이고 사용하면, 튜플 형태로 받는다. (이터레이터 가능)
+* 매개변수가 몇 개일지 알 수 없을 때 사용하면 유용하다.
+
+```python
+def args_func(*args):
+    for i, v in enumerate(args):
+        print(i, v)
+
+args_func('Kim')
+args_func('Lee', 'Park')
+
+# 결과
+0 Kim
+0 Lee
+1 Park
+```
+* enumerate() 함수는 interable한 객체의 인덱스를 출력하는 것을 도와준다.
+
+### **kwargs
+* 함수의 매개변수 앞에 *를 두 개 붙이고 사용하면, 딕셔내리 형태로 받는다.
+
+```python
+def args_func(**kwargs):
+    print(kwargs)
+
+args_func(Kim='sang', Lee='jung')
+
+# 결과
+{'Kim': 'sang', 'Lee': 'jung'}
+```
+* 일반 매개변수는 함수를 호출할 때 꼭 작성해줘야 하지만, 가변인자인 `*args`와 `**kwargs`는 있어도 되고 없어도 된다.
+
+### 중첩 함수
+```python
+def nested_func(num):
+    def func_in_func(num):
+        print(num)
+    print("in func")
+    func_in_func(num + 10000)
+
+nested_func(10000)
+
+# 결과
+in func
+20000
+```
+
+### Hint
+* 함수를 정의할 때 매개변수의 타입과 리턴 타입을 명시해줘서 힌트를 남길 수 있다.
+* 힌트에서 작성한대로 타입을 입력하지 않아도 에러가 발생하지는 않는다.
+
+```python
+def tot_length1(word: str, num: int) -> int:
+    return len(word) * num
+
+print(tot_length1("i love you", 10))
+```
+
+## 람다식
+* 함수를 간단하게 작성하는 방법으로 메모리가 절약되고, 가독성이 향상되며 코드가 간결해지는 장점이 있다.
+* 함수는 객체가 생성되어 리소스(메모리)를 할당한다.
+* 반면 람다식은 즉시 실행(Heap 초기화) -> 메모리 초기화
+
+```python
+lambda_mul_func = lambda x: x * 10
+
+print(lambda_mul_func(5))
+
+def func_final(x, y, func):
+    print(x * y * func(10))
+
+func_final(10, 10, lambda x: x * 1000)
+
+# 결과
+50
+1000000
+```
+* `lambda 매개변수: 실행부` 식으로 람다식을 사용할 수 있다.
+* 함수의 매개변수로 함수를 넣을 수 있는데, 그 때 람다식을 작성해서 넘기면 메모리를 절약할 수 있다. + 간편
+
+
+# 클래스
+## 클래스
+* 네임스페이스 : 객체를 인스턴화 할 때 저장된 공간
+* 클래스 변수 : 직접 사용 가능, 객체보다 먼저 생성
+* 인스턴스 변수: 객체마다 별도로 존재, 인스턴스 생성 후 사용 가능
+* 클래스와 인스턴스의 차이를 아는 것이 중요하다.
+
+### 선언
+```python
+class UserInfo:
+	def __init__(self, name):
+  		self.name = name
+
+user = UserInfo("Kim")
+```
+* 기본 선언 방법은 `class 클래스명:`으로 선언하고 아래에 구현하는 것이다.
+* 클래스명은 보통 첫 글자를 대문자로 한다.
+* `__init__` 메서드는 객체가 생성될 때 자동으로 동작하는 메서드이다.
+* 클래스 내부의 메서드의 매개변수로 self를 삽입하면 인스턴스 메서드, 삽입하지 않으면 클래스 메서드가 된다.
+* 인스턴스 객체를 생성하는 방법은 `클래스명()`이다.
+* `인스턴스객체변수.__dict__`로 해당 객체의 네임스페이스에 접근할 수 있다.
+
+### self
+* self.변수는 인스턴스 변수를 나타내고 클래스명.변수는 클래스 변수를 나타낸다.
+* 인스턴스 변수는 인스턴스 객체 별도의 값, 클래스 변수는 공유하는 값이다.
+* `인스턴스객체변수.변수이름`으로 해당 인스턴스 객체의 변수값에 접근할 수 있다.
+* `인스턴스객체변수.클래스변수`로 클래스 변수에도 접근할 수 있다. 인스턴스 네임스페이스에 값이 없으면 클래스 네임스페이스에서 값을 찾는 원리이다.
+* 클래스 메서드를 사용하려면 `클래스명.클래스메서드`로 접근해야한다.
+
+## 상속
+* 슈퍼클래스(부모클래스)로부터 서브클래스(자식클래스)로 상속을 받을 수 있다.
+* 상속을 받으면 슈퍼클래스의 속성과 메소드를 사용 가능하다.
+* 재사용성을 높이고 중복을 줄일 수 있는 것이 장점이다.
+
+```python
+class Car:
+    """Parent Class"""
+    def __init__(self, type, color):
+        self.type = type
+        self.color = color
+
+    def show(self):
+        print('Car Class "Show" Method!')
+
+
+class BmwCar(Car):
+    """Sub Class"""
+    def __init__(self, car_name, tp, color):
+        super().__init__(tp, color)
+        self.car_name = car_name
+```
+* 자식 클래스를 작성할 때 클래스명에 (부모클래스명)을 넣어주면 해당클래스를 상속받는다.
+* 부모클래스의 `__init__`에 접근하기 위해서 super()를 사용하였다.
+* 자식클래스의 변수로 부모클래스의 메소드에 접근할 수 있다.
+* 부모클래스의 메서드 이름과 같은 메서드를 자식클래스에서 재정의하여 사용할 수 있다.
+
+### Inheritance Info
+* 상속 정보를 리스트 타입으로 반환해준다.
+* 복잡한 상속 관계를 알아볼 수 있도록 도와준다.
+* `찾고자 하는 클래스.mro()`
+
+### 다중 상속
+* 파이썬에서는 다중 상속을 지원한다.
+
+```python
+class X():
+    pass
+
+class Y():
+    pass
+
+class A(X, Y):
+    pass
+```
+* 위와 같이 작성하면 클래스 A는 클래스 X와 Y를 모두 상속받는다.
+
+
+# 모듈, 패키지
+* 모듈은 필요한 기능을 모아놓은 것이고, 패키지는 모듈을 모아둔 것이다.
+
+## 사용법
+```python
+from pkg.fibonacci import Fibonacci
+from pkg.fibonacci import *
+from pkg.fibonacci import Fibonacci as fb
+```
+* from 뒤는 필요한 기능을 모아둔 파일의 경로이다.
+* import는 해당 파일에 있는 클래스를 의미한다.
+* import에 *를 사용해 모든 것을 받아올 수도 있지만 필요한 것만 import할 것을 권장한다.
+* as 를 사용해 alias를 지정해서 사용할 수도 있다.
+
+# 파일 읽기, 쓰기
+* 읽기 모드 : r
+* 쓰기 모드 : w (기존 파일 삭제)
+* 추가 모드 : a (파일 생성 또는 추가)
+
+## 파일 읽기
+```python
+f = open('./resource/review.txt', 'r')
+content = f.read()
+print(content)
+f.close()
+```
+* open함수를 사용해서 파일을 조작하는데, 첫 번째 매개변수에는 파일을 지정하고, 두 번째 매개변수에는 모드를 설정한다.
+* 변수에 담아 변수.read()를 실행하면 파일의 내용을 반환한다.
+* open함수를 실행한 후에는 꼭 close 함수를 실행해서 자원을 반환해줘야 한다.
+
+```python
+with open('./resource/review.txt', 'r') as f:
+    c = f.read()
+    print(c)
+```
+* with을 사용해서 open 함수를 좀 더 쉽게 사용할 수 있다.
+* 이렇게 했을 때 장점은 f를 close로 닫아주지 않아도 indent를 벗어나면 자동으로 반환해준다는 것이다.
+
+```python
+with open('./resource/review.txt', 'r') as f:
+    for c in f:
+        print(c)
+```
+* f 자체가 iterable 하기 때문에 반복문으로 바로 출력할 수도 있다.
+
+```python
+with open('./resource/review.txt', 'r') as f:
+    line = f.readline()
+    while line:
+        print(line)
+        line = f.readline()
+```
+* readline() 메서드는 한 줄 씩 읽는 메서드이다.
+* while 문에서 line에 내용이 남아있을 때까지만 반복한다.
+* readlines() 메서드는 전체를 읽은 후 라인 단위 리스트로 저장하는 메서드이다.
+
+## 파일 쓰기
+```python
+with open('./resource/test.txt', 'w') as f:
+    f.write('niceman')
+
+with open('./resource/test.txt', 'a') as f:
+    f.write('niceman')
+```
+* 모드를 w로 하고 write 메서드를 호출한 뒤 매개변수로 문자열을 넣으면 해당 문서에 문자열이 삽입되어 생성된다.
+* 모드를 a로 하고 write 메서드를 호출하면 매개변수안의 값이 test.txt에 추가된다.
+
+```python
+with open('./resource/test.txt', 'w') as f:
+    list = ['Kim', 'Park', 'Lee']
+    f.writelines(list)
+```
+* writelines() 메서드를 호출하고 안에 리스트를 넣으면 리스트를 test.txt에 차례대로 작성한 파일이 생성된다.
+
+```python
+with open('./resource/test.txt', 'w') as f:
+    print("TESTSET", file=f)
+```
+* open함수 안에서 print()함수 옵션으로 file=해당변수를 넣으면 print문이 콘솔에 찍히는 것이 아니라 파일에 작성된다.
