--- a/_posts/2021-06-14-0614-0620.md
+++ b/_posts/2021-06-14-0614-0620.md
@@ -913,3 +913,294 @@ with open('./resource/test.txt', 'w') as f:
     print("TESTSET", file=f)
 ```
 * open함수 안에서 print()함수 옵션으로 file=해당변수를 넣으면 print문이 콘솔에 찍히는 것이 아니라 파일에 작성된다.
+
+## 0617
+# 테스트 2차 준비 4일차
+파이썬의 기초 문법이 얼추 끝나간다.  
+4일이라는 상당히 짧은 시간동안 한 언어에 대해 어느정도 개념이 생기다니 신기하다.  
+그만큼 익히기도 쉽고 사용하기도 쉬워서 코딩테스트를 준비하는데 확실하게 도움이 될 것 같다는 생각이 들었다.  
+오늘은 예외 처리와 외부 파일 접근, 그리고 db연동에 대해 학습하였다.
+
+# 예외
+* 예외는 에러를 뜻하며, 여러 종류의 에러들이 존재한다.
+* 크게 문법적으로 문제가 있는 에러와 문법적으로 에러는 없지만 코드 실행 프로세에서 발생하는 런타임 에러가 있다.
+* 항상 예외가 발생하지 않을 것으로 가정하고 먼저 코딩해야 하고, 런타임 예외 발생 시 예외처리를 권장한다. (EAFP 코딩 스타일)
+
+## 에러의 종류
+### SyntaxError
+* 잘못된 문법
+
+```python
+print('test)
+print('Hello'))
+if True
+	pass
+```
+
+
+### NameError
+* 참조 변수 없음
+
+```python
+a = 10
+print(b)
+```
+
+### ZeroDivisionError
+* 숫자를 0으로 나누면 발생하는 에러
+
+```python
+print(10 / 0)
+```
+
+### IndexError
+* 인덱스 범위를 오버할 때 발생하는 에러
+
+```python
+x = [10, 20, 30]
+
+print(x[3])
+```
+
+### AttributeError
+* 모듈, 클래스에 있는 잘못된 속성 사용시에 발생
+
+### ValueError
+* 참조 값이 없을 때에 발생하는 예외
+
+```python
+x = [1, 5, 9]
+
+x.remove(100)
+```
+
+### FileNotFoundError
+* 파일 open시 없는 파일을 참조할 경우 발생
+
+### TypeError
+* 자료형에 맞지 않는 연산을 수행할 경우
+* ex) 리스트와 튜플의 덧셈연산을 하였을 때
+
+## 예외 처리 방법
+```python
+try:
+	# 예외가 발생할 가능성이 있는 코드
+except 예외명:
+	# 예외명에 해당하는 예외 발생 시 실행 코드
+	# 여러 개를 연달아 작성 가능
+	# 좁은 범위에서 큰 범위로
+else:
+	# try문에서 예외가 발생하지 않았을 경우 실행
+finally:
+	# 예외가 발생하던 안하던 무조건 실행되는 코드
+```
+
+### 예외 발생시키기
+* raise 키워드를 사용해서 예외를 발생
+
+```python
+try:
+	a = 'Park'
+	if a == 'Kim':
+		print('pass')
+	else:
+		raise	ValueError
+```
+* 파이썬 에러말고, 에러 발생을 원하는 상황에 에러를 발생시킬 수 있다.
+
+# 외부 파일 읽기
+## CSV 파일
+* MIME - text/csv
+* `import csv`를 해줘야 한다.
+
+```python
+with open('./resource/sample1.csv', 'r', encoding='euc-kr') as f:
+    reader = csv.reader(f)
+    next(reader)
+
+    for c in reader:
+        print(c)
+```
+* txt 파일과 마찬가지로 open 함수를 사용해서 파일을 읽는다.
+* csv.reader(파일)로 반환된 결과를 변수에 담는다.
+* 반환 결과는 iterable하기 때문에 반복문으로 출력하면 한 줄씩 리스트로 출력한다.
+* next(반환결과)를 사용해서 사용 횟수만큼 앞줄이 제외되고 출력된다.
+* csv 파일이 ,가 아니라 `|`로 구분되어 있으면 `csv.reader(f, delimiter='|')` 옵션을 사용해서 , 리스트로 반환해줄 수 있다.
+
+```python
+with open('./resource/sample1.csv', 'r') as f:
+    reader = csv.DictReader(f)
+    for c in reader:
+        for k, v in c.items():
+            print(k, v)
+```
+* `csv.DictReader(f)`를 사용하면 딕셔내리로 반환해준다.
+
+### CSV 파일 쓰기
+```python
+w = [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12], [13, 14, 15]]
+
+with open('./resource/sample3.csv', 'w') as f:  
+    wt = csv.writer(f)
+    for v in w:
+        wt.writerow(v)
+
+    wt.writerows(w)
+```
+* sample3.csv 파일을 생성하고 한 줄씩 작성한다.
+* writerows 함수는 결과적으로는 writerow와 같다
+
+## XSL, XLSX
+* MIME - applications/vnd.excel
+* pip install pandas 설치 필요
+* pip install xlrd   설치 필요
+* pip install openpyxl 설치 필요
+
+```python
+import pandas as pd
+
+xlsx = pd.read_excel('./resource/sample.xlsx') # sheetname='시트명' 또는 숫자, header=3, skiprow=1 실습
+
+# 상위 데이터 확인
+print(xlsx.head())
+
+# 데이터 확인
+print(xlsx.tail())
+
+# 데이터 구조
+print(xlsx.shape) # 행, 열
+
+# 엑셀 or CSV 다시 쓰기
+xlsx.to_excel('./resource/result.xlsx', index=False)
+xlsx.to_csv('./resource/result.csv', index=False)
+```
+
+# DB
+### DB 연결
+```python
+import sqlite3
+
+conn = sqlite3.connect('원하는경로/database.db', isolation_level=None)
+
+c = conn.cursor()
+```
+* sqlite3.connect()는 해당 경로에 db를 조회하고, 없으면 생성한다.
+* isolation_level=None은 auto commit을 해주는 옵션이다.
+* conn.cursor()은 커서를 연결해준다. 앞으로 c를 사용해서 db를 조작할 예정이다.
+
+### 테이블 생성
+* sqlite datatype
+	* text
+	* numeric
+	* integer
+	* real
+	* blob
+
+```python
+c.execute("CREATE TABLE IF NOT EXISTS users(id INTEGER PRIMARY KEY, username text, email text, phone text, website text, regdate text)")
+```
+* users 테이블을 생성한다.
+* 커서.execute 명령어로 sql을 작성한다.
+
+### 데이터 삽입
+```python
+c.execute("INSERT INTO users(id, username, email, phone, website, regdate) VALUES (?, ?, ?, ?, ?, ?)",
+          (2, 'Park', 'Park@naver.com', '010-1111-1111', 'Park.com', nowDatetime))
+```
+* 문자열이 아닌 변수를 sql에 삽입해야 하는 경우는 우선 변수를 삽입할 자리에 ?를 작성하고 sql이 마친 뒤 `, ()` 형식으로 삽입한다.
+
+```python
+userList = (
+    (3, 'Lee', 'Lee@naver.com', '010-2222-2222', 'Lee.com', nowDatetime),
+    (4, 'Cho', 'Cho@naver.com', '010-3333-3333', 'Cho.com', nowDatetime),
+    (5, 'Yoo', 'Yoo@naver.com', '010-4444-4444', 'Yoo.com', nowDatetime)
+)
+c.executemany("INSERT INTO users(id, username, email, phone, website, regdate) VALUES (?, ?, ?, ?, ?, ?)", userList)
+```
+* 한 번에 여러 데이터를 삽입할 수 있는 executemany() 함수가 있다.
+* 미리 중첩 리스트나 중첩 튜플로 삽입할 데이터를 정의해두고, 해당 변수를 입력하여 삽입한다.
+
+### 데이터 조회
+```python
+c.execute("select * from users")
+print(c.fetchone())
+print(c.fetchmany(size=2))
+print(c.fetchall())
+```
+* 처음 데이터를 조회했을 때는 콘솔에 아무것도 찍히지 않는다.
+* c.fetchone()은 현재 커서 위치에서 로우 하나를 반환한다.
+* c.fetchmany(size=x)는 현재 커서 위치에서 로우 x개를 반환한다.
+* c.fetchall()은 전체 로우를 반환한다.
+* 커서 위치는 계속해서 변경된다.
+
+```python
+c.execute("select * from users")
+
+rows = c.fetchall()
+for row in rows:
+    print(row)
+
+for row in c.fetchall():
+    print(row)
+
+for row in c.execute("select * from users"):
+    print(row)
+```
+* 위의 세 개 모두 각각 다른 순회 방법이다.
+* 1번은 변수에 모두 검색하는 리스트를 저장한 뒤 반복문들 돌리는 것이고,
+* 2번은 변수 대신 바로 집어넣은 것이다.
+* 3번은 반복 대상에 바로 execute() 함수를 실행하여 순회한 것이다.
+
+```python
+c.execute('select * from users where id=?', (1,))
+print(c.fetchall())
+
+c.execute('select * from users where id="%s"' % 1)
+print(c.fetchall())
+
+c.execute('select * from users where id=:Id', {'Id': 3})
+print(c.fetchall())
+```
+* sql문에 변수를 넣는 방법에는 크게 3가지가 있다.
+	1. ?와 , 튜플
+	2. %s와 % 자료형
+	3. :key와 , 딕셔내리
+
+### 데이터 수정 및 삭제
+```python
+c.execute("UPDATE users SET username = ? WHERE id = ?", ('niceman', 1))
+c.execute("DELETE FROM users WHERE id = ?", (7,))
+```
+
+### 테이블 전체 데이터 삭제
+```python
+Print(conn.execute("delete from users").rowcount)
+```
+* 테이블 데이터를 모두 삭제하고 삭제한 로우를 반환한다.
+
+### 커밋, 롤백, 접속해제
+```python
+# 커밋
+conn.commit()
+
+# 롤백
+conn.rollback()
+
+# 접속 해제
+conn.close()
+```
+* 사용 후 자원을 반환해줘야 한다.
+
+
+
+## Dump 출력
+* 데이터베이스 백업을 위해 사용
+```python
+with conn:
+    with open('./resource/dump.sql', 'w') as f:
+        for line in conn.iterdump():
+            f.write('%s\n' % line)
+```
+* conn에 연결된 db가 dump.sql에 복사된다. (테이블 구조와 데이터 삽입 커밋까지)
+* 자동으로 conn과 f는 자원 반환된다.
+
