--- a/_posts/2021-06-14-0614-0620.md
+++ b/_posts/2021-06-14-0614-0620.md
@@ -1204,3 +1204,159 @@ with conn:
 * conn에 연결된 db가 dump.sql에 복사된다. (테이블 구조와 데이터 삽입 커밋까지)
 * 자동으로 conn과 f는 자원 반환된다.
 
+## 0614
+# 테스트 2차 준비 5일차
+한 주 동안 파이썬을 학습하였다.  
+기말고사와 병행하며 약 5일동안 학습했을 뿐인데, 한 언어에 대해 많이 배운 것 같아서 뿌듯한 한 주였다.  
+오늘 시험까지 잘 마무리 지어서 주말동안은 파이썬을 복습하고, 자료구조 강의로 넘어갈 준비를 해야겠다.  
+오늘은 지금까지 배운 것을 활용하여 미니 게임 프로젝트를 하고, 파이썬의 객체 참조와 deep copy에 대해서 학습하였다.  
+
+# 객체 참조
+## id vs `__eq__`
+* id는 객체 주소 비교, `__eq__`는 값 비교
+* is는 주소 비교 연산자, ==는 값 비교 연산자
+
+```python
+x = [1,2,3,4]
+y = x
+
+x.append(5)
+
+print(x, y)
+print(x == y)
+print(x is y)
+print(x is not y)
+
+x = [1, 2, 3, 4]
+y = list(x)
+
+x.append(5)
+
+print(x, y)
+print(x == y)
+print(x is y)
+print(x is not y)
+
+# 결과
+[1, 2, 3, 4, 5] [1, 2, 3, 4, 5]
+True
+True
+[1, 2, 3, 4, 5] [1, 2, 3, 4]
+False
+False
+```
+* 리스트가 담긴 변수에는 리스트의 주소값이 담겨있기 때문에 그것을 다른 변수에 그대로 할당하면 제대로 복사가 되지 않고 둘은 같은 객체를 가르키게 된다.
+* 해당 자료형을 생성하는 형변환을 해줘서 그 안에 값을 담아줘야 제대로 복사가 된다.
+
+### 튜플 불변형의 비교
+```python
+tuple1 = (10, 15, [100, 1000])
+tuple2 = (10, 15, [100, 1000])
+
+print('EX3-1 -', id(tuple1), id(tuple2))
+print('EX3-2 -', tuple1 is tuple2)
+print('EX3-3 -', tuple1 == tuple2)
+print('EX3-4 -', tuple1.__eq__(tuple2))
+
+# 결과
+EX3-1 - 4481162240 4481568512
+EX3-2 - False
+EX3-3 - True
+EX3-4 - True
+```
+* 원래 튜플은 불변형이어서 id 값이 같아야 하지만 내부에 서로 다른 id를 가진 리스트가 존재하기 때문에 튜플의 id 값도 달라진다.
+
+```python
+tl1 = [10, [100, 105], (5,10,15)]
+tl2 = tl1
+tl3 = list(tl1)
+
+print('EX4-1 -', tl1 == tl2)
+print('EX4-2 -', tl1 is tl2)
+print('EX4-3 -', tl1 == tl3)
+print('EX4-4 -', tl1 is tl3)
+
+tl1.append(1000)
+tl1[1].remove(105)
+
+print('EX4-5 -', tl1)
+print('EX4-6 -', tl2)
+print('EX4-7 -', tl3)
+
+tl1[1] += [110, 120]
+tl1[2] += (110, 120)
+
+print('EX4-8 -', tl1)
+print('EX4-9 -', tl2)  # 튜플 재 할당(객체 새로 생성)
+print('EX4-10 -', tl3)
+
+# 결과
+EX4-1 - True
+EX4-2 - True
+EX4-3 - True
+EX4-4 - False
+EX4-5 - [10, [100], (5, 10, 15), 1000]
+EX4-6 - [10, [100], (5, 10, 15), 1000]
+EX4-7 - [10, [100], (5, 10, 15)]
+EX4-8 - [10, [100, 110, 120], (5, 10, 15, 110, 120), 1000]
+EX4-9 - [10, [100, 110, 120], (5, 10, 15, 110, 120), 1000]
+EX4-10 - [10, [100, 110, 120], (5, 10, 15)]
+```
+* `tl1[1].remove(105)`를 했을 때 tl3에서도 삭제되는데, 그 이유는 깊은 복사를 하지 않았기 때문에 모두 같은 id를 가지고 있기 때문이다.
+* 같은 이유로 `tl1[1] += [110, 120]`를 했을 때 tl3에서도 추가되었다.
+* 반면, `tl1[2] += (110, 120)`를 했을 때는 tl1과 tl2에만 변화가 있는데, 튜플은 기본적으로 삭제가 불가능하기 때문에 삭제가 되는 것이 아니라 새로 객체를 생성하여 재할당하는 개념이다. 그래서 tl1과 id가 같은 tl2의 튜플만 같은 객체를 재할당해줘서 이런 결과가 나온다.
+
+## 얕은 복사와 깊은 복사
+* 얕은 복사는 객체의 id만 다르도록 복사하는 경우이다.
+* 깊은 복사는 객체의 id 뿐만이 아니라, 객체가 가지고 있는 리스트나 튜플 등, 객체의 객체까지 모두 id가 다르도록 복사하는 것이다.
+* 깊은 복사를 사용하기 위해서는 copy를 import 한 뒤 `copy.deepcopy(복사할객체)` 방식으로 사용한다.
+
+### 함수 매개변수 전달 사용법
+```python
+def mul(x,y):
+    x += y
+    return x
+
+a = [10, 100]
+b = [5, 10]
+
+print('EX6-2 -', mul(a, b), a, b)  # 가변형 a -> 원본 데이터 변경
+
+c = (10, 100)
+d = (5, 10)
+
+print('EX6-2 -', mul(c, d), c, d)  # 불변형 c -> 원본 데이터 변경 안됨
+
+# 결과
+EX6-2 - [10, 100, 5, 10] [10, 100, 5, 10] [5, 10]
+EX6-2 - (10, 100, 5, 10) (10, 100) (5, 10)
+```
+* 가변형 데이터는 매개변수로 값을 넘길 때 주소의 값을 넘기기 때문에 원본 데이터가 변경된다.
+* 불변형 데이터는 매개변수로 값을 넘겨서 수정하여도 원본 데이터가 변경되지 않는다.
+
+### 파이썬 불변형 예외
+* str, bytes, frozen set, Tuple은 사본을 생성하지 않고, 참조를 반환한다.
+
+```python
+tt1 = (1, 2, 3, 4, 5)
+tt2 = tuple(tt1)
+tt3 = tt1[:]
+
+print('EX7-1 -', tt1 is tt2, id(tt1), id(tt2))
+print('EX7-2 -', tt3 is tt1, id(tt3), id(tt1))
+
+tt4 = (10, 20, 30, 40, 50)
+tt5 = (10, 20, 30, 40, 50)
+ss1 = 'Apple'
+ss2 = 'Apple'
+
+print('EX7-3 -', tt4 is tt5, tt4 == tt5, id(tt4), id(tt5))
+print('EX7-4 -', ss1 is ss2, ss1 == ss2, id(ss1), id(ss2))
+
+# 결과
+EX7-1 - True 4478616336 4478616336
+EX7-2 - True 4478616336 4478616336
+EX7-3 - True True 4479509504 4479509504
+EX7-4 - True True 4480468720 4480468720
+```
+
