--- a/_posts/2021-06-14-0614-0620.md
+++ b/_posts/2021-06-14-0614-0620.md
@@ -1360,3 +1360,8 @@ EX7-3 - True True 4479509504 4479509504
 EX7-4 - True True 4480468720 4480468720
 ```
 
+## 0619 ~ 0620
+평일동안 열심히 코딩테스트를 준비하고, 주말에는 휴식 시간을 가졌다.  
+학교 공부랑 겹쳐서 꽤나 힘든 일정이었다.  
+내일부터는 드디어 자료구조를 시작한다.  
+주말동안 푹 쉬었으니 또 열심히 달려봐야겠다.
